deploy/nettest-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: nettest-server
  name: nettest-server
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nettest-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nettest-server
    spec:
      containers:
      - image: docker-ecr002.rnd.gic.ericsson.se/jiuchen1986/nettest:v0.0.1
        imagePullPolicy: IfNotPresent
        name: nettest
        args:
        - "-host=0.0.0.0"
        ports:
        - containerPort: 5473
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 0
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nettest-server
  name: nettest-server
  namespace: default
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 5473-5473
    port: 5473
    protocol: TCP
    targetPort: 5473
  selector:
    app: nettest-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nettest-server
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: default
  rules:
  - host: hello-word.grpc.com
    http:
      paths:
      - backend:
          service:
            name: nettest-server
            port:
              number: 5473
        path: /nettest.NetTest/ListNumbers
        pathType: Prefix
  tls:
  - hosts:
    - example.com
    secretName: nettest-server-cert
status:
  loadBalancer: {}
